# feynman_lectures

./: .gitignore  Makefile  README.md  feynman-lectures.cabal  shell.nix
notes/: Main.lhs
