cabal-version:      2.4
name:               feynman-lectures
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Eddy Schauman-Haigh
maintainer:         eddy@schauman-haigh.fi

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable feynman-lectures
    main-is:          Main.lhs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   notes
    default-language: Haskell2010
